# Yuuzu-IDE

./: .gitignore  2026-06-16-011359-ide-terminals-ui.txt  2026-06-16-011408-keybind.txt  AGENTS.md  CHANGELOG.md  README.md  Yuuzu-IDE.standalone.html  bunfig.toml  index.html  package.json  roadmap.md  tsconfig.json  vite.config.ts
.codex/skills/: README.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  gh-pages.yml  release.yml
docs/: goal.md
docs/architecture/: extension-api-draft.md  git-deep-dive-results.md  issue-12-windows-terminal-ime-smoke.md  node-0-spike-results.md  node-1-core-results.md  node-10-remote-results.md  node-11-debugging-results.md  node-12-extension-results.md  node-13-hardening-results.md  node-15-codemirror-csharp-results.md  node-2-editor-results.md  node-3-terminal-results.md  node-4-git-results.md  node-5-docs-results.md  node-6-language-results.md  node-7-agent-results.md  node-8-browser-results.md  node-9-database-tools-results.md  progress.md  tech-stack.md
docs/code-review/: change-report-agentzone-column-toggle-2026-06-13.html  change-report-git-deep-dive-2026-06-13.html  change-report-ide-v2-features-complete-2026-06-13.html  change-report-ide-v2-real-wiring-2026-06-13.html  change-report-ide-v2-workbench-2026-06-13.html  change-report-stability-terminal-fixes-2026-06-12.html
docs/codex-goals/: complete-roadmap.md  multi-subagent-tdd-roadmap.md  start-multi-subagent-tdd-goal.md
docs/html/: agentzone-auto-grid-exploration-2026-06-21.html  git-feature-jetbrains-comparison-2026-06-11.html  git-jetbrains-redesign-2026-06-11.html  goal-alignment-audit-report-2026-06-11.html  lsp-document-readiness-spec-2026-06-23.html  sidebar-rail-micro-adjustment-mockup-2026-06-20.html  (+3 more)
scripts/: extract-release-notes.mjs  extract-release-notes.test.mjs  measure-mem.ps1  measure-node0.sh  verify-codemirror-large-file.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  background_process.rs  browser_preview.rs  clipboard.rs  commands.rs  database.rs  debug.rs  diagnostics.rs  docs.rs  extensions.rs  file_system.rs  file_watcher.rs  git.rs  git_log.rs  lib.rs  lsp.rs  main.rs  metrics.rs  pty.rs  recovery.rs  remote.rs  search.rs  settings.rs  tasks.rs  terminal.rs  workspace.rs  workspace_scan.rs  workspace_store.rs
(+297 files in other folders)
