[package]
name = "yuuzu-ide"
version = "0.1.0"
description = "Yuuzu-IDE desktop application"
authors = ["Yuuzu"]
edition = "2021"

[lib]
name = "yuuzu_ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ignore = "0.4.26"
notify = "8.2.0"
portable-pty = "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.1"
uuid = { version = "1.23.2", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.27.0"
