[package]
name = "yuuzu-ide"
version = "0.1.0"
description = "Yuuzu-IDE desktop application"
authors = ["Yuuzu"]
edition = "2021"

[lib]
name = "yuuzu_ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ignore = "0.4.26"
base64 = "0.22.1"
lsp-types = "0.97.0"
notify = "8.2.0"
portable-pty = "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.1"
uuid = { version = "1.23.2", features = ["v4", "serde"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
tokio-postgres = "0.7.17"
futures-util = "0.3.32"
keyring = "4.0.1"
keyring-core = "1.0.0"
sqlparser = "0.62.0"
csv = "1.4.0"
url = "2.5.8"
tokio = { version = "1.52.3", features = ["rt", "time", "net", "macros", "io-util", "sync"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
tiberius = { version = "0.12.3", default-features = false, features = ["tds73", "tokio", "tokio-util", "rustls"] }
russh = "0.61.2"
russh-sftp = "2.3.0"
async-trait = "0.1.89"

[dev-dependencies]
tempfile = "3.27.0"
